# casepro

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  app-entrypoint.sh  casepro_create_message_script.py  celerybeat-schedule  code_check.py  docker-entrypoint.sh  fabconfig.py  karma.conf.coffee  manage.py  nginx.conf  package-lock.json  package.json  pip-freeze.txt  pip-requires.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
casepro/: backend.py  celery.py  compress.py  settings.py  settings.py.dev  settings.py.postgres  settings.py.prod  settings.py.staging  settings.py_prod  settings_common.py  settings_production.py  settings_travis.py  test.py  urls.py  wsgi.py
casepro/api/: __init__.py  apps.py  serializers.py  signals.py  support.py  tests.py  urls.py  views.py
casepro/backend/: __init__.py  junebug.py  rapidpro.py  tests.py
casepro/cases/: __init__.py  context_processors.py  forms.py  mixins.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
casepro/contacts/: __init__.py  apps.py  models.py  signals.py  sync.py  tasks.py  tests.py  urls.py  views.py
casepro/dash_ext/: __init__.py  sync.py  tasks.py  tests.py
casepro/msg_board/: __init__.py  models.py  tests.py  urls.py  views.py
casepro/msgs/: __init__.py  apps.py  context_processors.py  faq_csv_example.csv  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
casepro/orgs_ext/: __init__.py  apps.py  forms.py  mixins.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
casepro/profiles/: __init__.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
casepro/rules/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
casepro/sql/: __init__.py  current_functions.sql  current_indexes.sql  current_triggers.sql  msgs_0001.sql  msgs_0002.sql
casepro/statistics/: __init__.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
casepro/utils/: __init__.py  email.py  export.py  middleware.py  tests.py  views.py
config/: celery.conf  nginx.conf  supervisor.conf  sync.conf
docker/: Dockerfile  docker-compose.yml  docker-start.sh  nginx.conf  supervisor.conf
karma/: helpers.coffee  test-controllers.coffee  test-directives.coffee  test-filters.coffee  test-modals.coffee  test-services.coffee  test-utils.coffee
media/test_imports/: faq_bad_import_labels.csv  faq_good_import.csv
static/: error.html
static/coffee/: app.coffee  cases.coffee  controllers.coffee  directives.coffee  filters.coffee  modals.coffee  services.coffee  upartners.coffee  utils.coffee
static/css/: pods.css
static/js/: libphonenumber.min.js  raven.min.js
static/less/: cases.less  pods.less  upartners.less
static/templates/: alert.html  alerts.html  case-confirm-modals.html  case-notifications.html  date.html  notifications.html  pod.html  tooltip.html
templates/: 404.html  500.html  common_dialogs.haml  download.haml  frame.haml  lang_switcher.haml  modals.haml  org_chooser.haml  public_base.haml
templates/cases/: case_read.haml  caseexport_read.haml  contact_read.haml  dashboard.haml  group_list.haml  home_archived.haml  home_base.haml  home_cases.haml  home_closed.haml  home_inbox.haml  home_messages.haml  home_open.haml  home_outgoing.haml  inbox_base.haml  inbox_cases.haml  inbox_messages.haml  inbox_outgoing.haml  label_list.haml  partner_create.haml  partner_list.haml  partner_read.haml  partner_update.haml
templates/comments/: form.html
templates/contacts/: contact_read.haml  group_list.haml
templates/home/: home.haml  home_base.haml  home_cases.haml  home_inbox.haml  messageexport_read.haml  org_chooser.haml
upartners/: celery.py  email.py  settings.py.postgres  settings.py.staging  settings_common.py  test.py  translation.py  urls.py  wsgi.py
upartners/home/: urls.py  (+4 more)
(+379 files in other folders)
