[tool.poetry]
name = "casepro"
version = "1.13.2"
description = "Case management dashboard for UNICEF and partner organizations"
authors = ["Nyaruka <code@nyaruka.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"
rapidpro-dash = "^1.11.0"
smartmin = "^4.0.0"
Django = "^4.0.9"
celery = "^5.2.2"
djangorestframework = "^3.11.2"
phonenumbers = "^8.12.18"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
django-redis = "^5.2.0"
django-contrib-comments = "^2.0.0"
django-celery-email = "^3.0.0"
django-compressor = "^4.0"
django-el-pagination = "^3.3.0"
django-storages = "^1.11.1"
iso-639 = {git = "https://github.com/noumar/iso639.git", tag = "0.4.5"}  # https://github.com/python-poetry/poetry/issues/6996
colorama = "^0.4.4"
dj-database-url = "^0.5.0"
boto3 = "^1.17.11"
sentry-sdk = "^0.20.3"
rapidpro-python = "^2.11.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
isort = "^5.10.1"
polib = "^1.1.0"
codecov = "^2.1.11"
colorama = "^0.4.4"
ruff = "^0.0.178"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501", "E741", "F405"]
fix = true

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.coverage.run]
source = ["./casepro"]

[tool.coverage.report]
ignore_errors = true
precision = 0
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: needs cover",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
omit = ["*/migrations/*", "*/tests*", "*settings*", "casepro/*/management/commands/*", "*/wsgi.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
